substrate/frame/support/test/tests/construct_runtime_ui/number_of_pallets_exceeds_tuple_size.stderr
error: The number of pallets exceeds the maximum number of tuple elements. To increase this limit, enable the tuples-96 feature of [frame_support].
  --> tests/construct_runtime_ui/number_of_pallets_exceeds_tuple_size.rs:71:2
   |
71 |     pub struct Runtime
   |     ^^^

error[E0412]: cannot find type `RuntimeCall` in this scope
  --> tests/construct_runtime_ui/number_of_pallets_exceeds_tuple_size.rs:35:64
   |
35 | pub type UncheckedExtrinsic = generic::UncheckedExtrinsic<u32, RuntimeCall, Signature, ()>;
   |                                                                ^^^^^^^^^^^ not found in this scope
   |
help: you might be missing a type parameter
   |
35 | pub type UncheckedExtrinsic<RuntimeCall> = generic::UncheckedExtrinsic<u32, RuntimeCall, Signature, ()>;
   |                            +++++++++++++

error[E0412]: cannot find type `Runtime` in this scope
  --> tests/construct_runtime_ui/number_of_pallets_exceeds_tuple_size.rs:37:25
   |
37 | impl pallet::Config for Runtime {}
   |                         ^^^^^^^ not found in this scope

error[E0412]: cannot find type `Runtime` in this scope
  --> tests/construct_runtime_ui/number_of_pallets_exceeds_tuple_size.rs:43:31
   |
43 | impl frame_system::Config for Runtime {
   |                               ^^^^^^^ not found in this scope

error[E0412]: cannot find type `RuntimeOrigin` in this scope
  --> tests/construct_runtime_ui/number_of_pallets_exceeds_tuple_size.rs:45:23
   |
45 |     type RuntimeOrigin = RuntimeOrigin;
   |                          ^^^^^^^^^^^^^ help: you might have meant to use the associated type: `Self::RuntimeOrigin`

error[E0412]: cannot find type `RuntimeCall` in this scope
  --> tests/construct_runtime_ui/number_of_pallets_exceeds_tuple_size.rs:47:21
   |
47 |     type RuntimeCall = RuntimeCall;
   |                        ^^^^^^^^^^^ help: you might have meant to use the associated type: `Self::RuntimeCall`

error[E0412]: cannot find type `RuntimeEvent` in this scope
  --> tests/construct_runtime_ui/number_of_pallets_exceeds_tuple_size.rs:53:22
   |
53 |     type RuntimeEvent = RuntimeEvent;
   |                         ^^^^^^^^^^^^ help: you might have meant to use the associated type: `Self::RuntimeEvent`

error[E0412]: cannot find type `PalletInfo` in this scope
  --> tests/construct_runtime_ui/number_of_pallets_exceeds_tuple_size.rs:59:20
   |
59 |     type PalletInfo = PalletInfo;
   |                       ^^^^^^^^^^
   |
help: you might have meant to use the associated type
   |
59 |     type PalletInfo = Self::PalletInfo;
   |                       ~~~~~~~~~~~~~~~~
help: consider importing one of these items
   |
18 + use frame_benchmarking::__private::traits::PalletInfo;
   |
18 + use frame_support::traits::PalletInfo;
   |
